# TradeCraft

./: .gitignore  README.md  README_zh.md  package-lock.json  package.json
.kiro/specs/automated-trading-system/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/tradecraft-frontend/: .config.kiro  requirements.md
backend/: codex_trader_creator.py  config.yaml  pyproject.toml  requirements.txt  run.py  server.py
backend/app/: cli.py
backend/app/adapters/: data_feed.py  simulator.py
backend/app/api/: __init__.py  market.py  traders.py
backend/app/backtest/: metrics.py  report.py
backend/app/core/: ai_agent.py  config.py  logging.py
backend/app/data/: market.py  repository.py
backend/app/engine/: context.py  core.py  events.py  models.py  orders.py  portfolio.py  trader.py  trader_store.py
backend/app/trading/: strategy.py  strategy_loader.py
backend/strategies/: my_strategy.py
backend/tests/: conftest.py  test_integration.py  test_trader_store.py
skills/auto-quant-trainer/: SKILL.md  program.md
skills/auto-quant-trainer/agents/: openai.yaml
skills/juejin-quant/: SKILL.md
skills/juejin-quant/agents/: openai.yaml
skills/juejin-quant/references/: capability-map.md  function-token-index.md  source-index.md
skills/retail-quant-trainer/: SKILL.md
skills/retail-quant-trainer/agents/: openai.yaml
skills/retail-quant-trainer/references/: daily-post-close-loop.md  strategy-implementation.md  trader-autoresearch-mode.md  trader-dimensions.md  trader-skill-template.md
tools/: make_docs_images.py
